Add ansible-lint to linting/CI
Also refactor tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -7,47 +7,66 @@ deps=
     ansible
     swagger-spec-validator==2.6.0
     jsonschema<4
+commands=
+    python -VV
+    ansible-playbook -i localhost, workflow-support/test-tsigkey-pdns-{env:pdns_version}.yml
+    ansible-playbook -i localhost, workflow-support/test-zone-pdns-{env:pdns_version}.yml
+[galaxy-base]
+deps=
+    ansible
 setenv=
     ANSIBLE_COLLECTIONS_PATH={envtmpdir}/collections
 commands=
-    python -VV
     ansible-playbook -i localhost, workflow-support/make-galaxy-yml.yml
     ansible-galaxy collection install -p {env:ANSIBLE_COLLECTIONS_PATH} src
-    ansible-playbook -i localhost, workflow-support/test-tsigkey-pdns-{env:pdns_version}.yml
-    ansible-playbook -i localhost, workflow-support/test-zone-pdns-{env:pdns_version}.yml
+[lint-base]
+deps=
+    black
+    flake8
+    ansible-lint
 [testenv:lint-action]
 ignore_errors=true
 allowlist_externals=bash
 passenv=GITHUB_* LINTLY_API_KEY
 deps=
-    black
-    flake8
+    {[galaxy-base]deps}
+    {[lint-base]deps}
     lintly23
     markupsafe==2.0.1
+setenv=
+    {[galaxy-base]setenv}
 commands=
-    bash -c 'flake8 --ignore=E501,E402,E231 | lintly --format=flake8 --no-request-changes'
-    bash -c 'black --check . 2>&1 >/dev/null | lintly --format=black --no-request-changes'
+    {[galaxy-base]commands}
+    bash -c 'flake8 --ignore=E501,E402,E231 src | lintly --format=flake8 --no-request-changes'
+    bash -c 'black --check --diff src  2>&1 >/dev/null | lintly --format=black --no-request-changes'
     bash -c 'shellcheck workflow-support/*.sh'
+    bash -c 'ansible-lint workflow-support/*.yml'
 [testenv:lint]
 allowlist_externals=bash
 deps=
-    black
-    flake8
+    {[galaxy-base]deps}
+    {[lint-base]deps}
+setenv=
+    {[galaxy-base]setenv}
 commands=
-    flake8 --ignore=E501,E402,E231
-    black --check .
+    {[galaxy-base]commands}
+    flake8 --ignore=E501,E402,E231 src
+    black src
     bash -c 'shellcheck workflow-support/*.sh'
+    bash -c 'ansible-lint --write=all workflow-support/*.yml'
 [testenv:py{38,39,310,311}-ansible]
 passenv=pdns_version
 deps=
+    {[galaxy-base]deps}
     {[ansible-base]deps}
 setenv=
-    {[ansible-base]setenv}
+    {[galaxy-base]setenv}
 commands=
+    {[galaxy-base]commands}
     {[ansible-base]commands}
 [testenv:publish-action]
 passenv=ANSIBLE_GALAXY_TOKEN TAG
 deps=
-    {[ansible-base]deps}
+    {[galaxy-base]deps}
 commands=
     ansible-playbook -i localhost, workflow-support/publish.yml
