--- a/workflow-support/make-galaxy-yml.yml
+++ b/workflow-support/make-galaxy-yml.yml
@@ -5,15 +5,16 @@
   gather_facts: false
 
   vars:
-    tag: "0.0.0"
-    collection_dir: "../src"
+    tag: 0.0.0
+    collection_dir: ../src
     ansible_python_interpreter: python
 
   tasks:
-    - debug:
+    - ansible.builtin.debug:
         var: ansible_python_interpreter
 
     - name: Template out the galaxy.yml file.
       ansible.builtin.template:
         src: templates/galaxy.yml.j2
         dest: "{{ collection_dir ~ '/galaxy.yml' }}"
+        mode: u=rw,go=r
