--- a/workflow-support/publish.yml
+++ b/workflow-support/publish.yml
@@ -6,35 +6,38 @@
 
   vars:
     tag: "{{ lookup('env','TAG') }}"
-    collection_dir: "../src"
+    collection_dir: ../src
 
   pre_tasks:
     - name: Ensure the TAG environment variable is set.
-      fail:
+      ansible.builtin.fail:
         msg: TAG is not set.
-      when: "lookup('env','TAG') == ''"
+      when: lookup('env','TAG') == ''
 
     - name: Ensure the ANSIBLE_GALAXY_TOKEN environment variable is set.
-      fail:
+      ansible.builtin.fail:
         msg: ANSIBLE_GALAXY_TOKEN is not set.
-      when: "lookup('env','ANSIBLE_GALAXY_TOKEN') == ''"
+      when: lookup('env','ANSIBLE_GALAXY_TOKEN') == ''
 
     - name: Ensure the ~/.ansible directory exists.
       ansible.builtin.file:
         path: ~/.ansible
         state: directory
+        mode: u=rwx,go=rx
 
     - name: Write the Galaxy token to ~/.ansible/galaxy_token
       ansible.builtin.copy:
         content: |
           token: "{{ lookup('env','ANSIBLE_GALAXY_TOKEN') }}"
         dest: ~/.ansible/galaxy_token
+        mode: u=rw,go=r
 
   tasks:
     - name: Template out the galaxy.yml file.
       ansible.builtin.template:
         src: templates/galaxy.yml.j2
         dest: "{{ collection_dir ~ '/galaxy.yml' }}"
+        mode: u=rw,go=r
 
     - name: Build the collection.
       ansible.builtin.command:
