Separate 'build' and 'publish' playbooks
Add a tox environment for making a local (untagged) build

--- a/tox.ini
+++ b/tox.ini
@@ -64,9 +64,17 @@ setenv=
 commands=
     {[galaxy-base]commands}
     {[ansible-base]commands}
+[testenv:build]
+deps=
+    {[galaxy-base]deps}
+setenv=
+    TAG=local
+commands=
+    ansible-playbook -i localhost, workflow-support/build.yml
 [testenv:publish-action]
 passenv=ANSIBLE_GALAXY_TOKEN TAG
 deps=
     {[galaxy-base]deps}
 commands=
+    ansible-playbook -i localhost, workflow-support/build.yml
     ansible-playbook -i localhost, workflow-support/publish.yml
