--- a/workflow-support/publish.yml
+++ b/workflow-support/publish.yml
@@ -10,14 +10,16 @@
 
   pre_tasks:
     - name: Ensure the TAG environment variable is set.
-      ansible.builtin.fail:
-        msg: TAG is not set.
-      when: lookup('env','TAG') == ''
+      ansible.builtin.assert:
+        that:
+          - lookup('env','TAG') != ''
+        fail_msg: TAG is not set.
 
     - name: Ensure the ANSIBLE_GALAXY_TOKEN environment variable is set.
-      ansible.builtin.fail:
-        msg: ANSIBLE_GALAXY_TOKEN is not set.
-      when: lookup('env','ANSIBLE_GALAXY_TOKEN') == ''
+      ansible.builtin.assert:
+        that:
+          - lookup('env','ANSIBLE_GALAXY_TOKEN') != ''
+        fail_msg: ANSIBLE_GALAXY_TOKEN is not set.
 
     - name: Ensure the ~/.ansible directory exists.
       ansible.builtin.file:
@@ -33,20 +35,6 @@
         mode: u=rw,go=r
 
   tasks:
-    - name: Template out the galaxy.yml file.
-      ansible.builtin.template:
-        src: templates/galaxy.yml.j2
-        dest: "{{ collection_dir ~ '/galaxy.yml' }}"
-        mode: u=rw,go=r
-
-    - name: Build the collection.
-      ansible.builtin.command:
-        chdir: "{{ collection_dir }}"
-        argv:
-          - ansible-galaxy
-          - collection
-          - build
-
     - name: Publish the collection.
       ansible.builtin.command:
         chdir: "{{ collection_dir }}"
