--- a/workflow-support/publish.yml
+++ b/workflow-support/publish.yml
@@ -25,21 +25,25 @@
       ansible.builtin.file:
         path: ~/.ansible
         state: directory
-        mode: u=rwx,go=rx
+        mode: u=rwx
 
     - name: Write the Galaxy token to ~/.ansible/galaxy_token
       ansible.builtin.copy:
         content: |
           token: "{{ lookup('env','ANSIBLE_GALAXY_TOKEN') }}"
         dest: ~/.ansible/galaxy_token
-        mode: u=rw,go=r
+        mode: u=rw
 
   tasks:
+    - name: Get collection details.
+      ansible.builtin.include_vars:
+        file: "{{ collection_dir ~ '/galaxy.yml' }}"
+        name: details
+
     - name: Publish the collection.
       ansible.builtin.command:
-        chdir: "{{ collection_dir }}"
         argv:
           - ansible-galaxy
           - collection
           - publish
-          - ./kpfleming-powerdns_auth-{{ tag }}.tar.gz
+          - "{{ collection_dir ~ '/' ~ details.namespace ~ '-' ~ details.name ~ '-' ~ tag ~ '.tar.gz' }}"
