--- a/tox.ini
+++ b/tox.ini
@@ -40,7 +40,7 @@ commands=
     bash -c 'flake8 --ignore=E501,E402,E231 src | lintly --format=flake8 --no-request-changes'
     bash -c 'black --check --diff src  2>&1 >/dev/null | lintly --format=black --no-request-changes'
     bash -c 'shellcheck workflow-support/*.sh'
-    bash -c 'ansible-lint workflow-support/*.yml'
+    bash -c 'ansible-lint'
 [testenv:lint]
 allowlist_externals=bash
 deps=
@@ -53,7 +53,7 @@ commands=
     flake8 --ignore=E501,E402,E231 src
     black src
     bash -c 'shellcheck workflow-support/*.sh'
-    bash -c 'ansible-lint --write=all workflow-support/*.yml'
+    bash -c 'ansible-lint --write=all -v'
 [testenv:py{38,39,310,311}-ansible]
 passenv=pdns_version
 deps=
