--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,17 +32,24 @@ on:
   schedule:
     - cron: "35 4 * * 6"
 
-env:
-  image_base: 'quay.io/km6g-ci-images/ansible-powerdns-auth'
-
 jobs:
+  image_details:
+    runs-on: ubuntu-20.04
+    outputs:
+      image_registry: ${{ steps.details.outputs.image_registry }}
+      image_base: ${{ steps.details.outputs.image_registry }}/${{ steps.details.outputs.registry_account }}/${{ steps.details.outputs.repo_name }}
+      base_image: ${{ steps.details.outputs.image_registry }}/${{ steps.details.outputs.registry_account }}/python
+    steps:
+    - uses: actions/checkout@v3
+    - id: details
+      uses: ./.github/actions/image-details
   preflight:
     runs-on: ubuntu-20.04
+    needs:
+    - image_details
     outputs:
       need_image: ${{ steps.preflight.outputs.need_image }}
       image_tag: ${{ steps.preflight.outputs.image_tag }}
-      # workaround to make image_base available in jobs
-      image_base: ${{ env.image_base }}
     steps:
     - uses: actions/checkout@v3
     - id: preflight
@@ -50,6 +57,7 @@ jobs:
   ci-image:
     runs-on: ubuntu-20.04
     needs:
+    - image_details
     - preflight
     strategy:
       matrix:
@@ -60,12 +68,15 @@ jobs:
       if: needs.preflight.outputs.need_image == 'true'
       with:
         pdns_version: ${{ matrix.pdns }}
-        image_name: ${{ needs.preflight.outputs.image_base }}:pdns-${{ matrix.pdns }}-${{ needs.preflight.outputs.image_tag }}
-        quay_username: ${{ secrets.QUAY_BOT_NAME }}
-        quay_password: ${{ secrets.QUAY_BOT_PASSWORD }}
+        base_image: ${{ needs.image_details.outputs.base_image }}
+        image_name: ${{ needs.image_details.outputs.image_base }}:pdns-${{ matrix.pdns }}-${{ needs.preflight.outputs.image_tag }}
+        image_registry: ${{ needs.image_details.outputs.image_registry }}
+        registry_username: ${{ secrets.QUAY_BOT_NAME }}
+        registry_password: ${{ secrets.QUAY_BOT_PASSWORD }}
   test:
     runs-on: ubuntu-20.04
     needs:
+    - image_details
     - preflight
     - ci-image
     strategy:
@@ -74,7 +85,7 @@ jobs:
         python: [py38, py39, py310, py311]
       fail-fast: false
     container:
-      image: ${{ needs.preflight.outputs.image_base }}:pdns-${{ matrix.pdns }}-${{ needs.preflight.outputs.image_tag }}
+      image: ${{ needs.image_details.outputs.image_base }}:pdns-${{ matrix.pdns }}-${{ needs.preflight.outputs.image_tag }}
     steps:
     - uses: actions/checkout@v3
     - name: start pdns_server
