--- a/tox.ini
+++ b/tox.ini
@@ -27,20 +27,17 @@ deps=
 [testenv:lint-action]
 ignore_errors=true
 allowlist_externals=bash
-passenv=GITHUB_* LINTLY_API_KEY
 deps=
     {[galaxy-base]deps}
     {[lint-base]deps}
-    lintly23
-    markupsafe==2.0.1
 setenv=
     {[galaxy-base]setenv}
 commands=
     {[galaxy-base]commands}
-    bash -c 'flake8 --ignore=E501,E402,E231 src | lintly --format=flake8 --no-request-changes'
-    bash -c 'black --check --diff src  2>&1 >/dev/null | lintly --format=black --no-request-changes'
+    flake8 --ignore=E501,E402,E231 src
+    black --check --diff src
     bash -c 'shellcheck workflow-support/*.sh'
-    bash -c 'ansible-lint'
+    bash -c 'ansible-lint -v'
 [testenv:lint]
 allowlist_externals=bash
 deps=
