--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,7 @@ on:
     - 'workflow-support/test-*.yml'
     - 'workflow-support/make_ci_image.sh'
     - 'workflow-support/start_server.sh'
+    - 'workflow-support/pdns-versions.json'
     - '.github/workflows/ci.yml'
     - '.github/actions/*/action.yml'
   pull_request:
@@ -27,6 +28,7 @@ on:
     - 'workflow-support/test-*.yml'
     - 'workflow-support/make_ci_image.sh'
     - 'workflow-support/start_server.sh'
+    - 'workflow-support/pdns-versions.json'
     - '.github/workflows/ci.yml'
     - '.github/actions/*/action.yml'
   schedule:
@@ -49,9 +51,12 @@ jobs:
     outputs:
       need_image: ${{ steps.preflight.outputs.need_image }}
       image_tag: ${{ steps.preflight.outputs.image_tag }}
+      versions: ${{ steps.get_versions.outputs.versions }}
     steps:
     - id: preflight
       uses: kpfleming/composite-actions/ci-preflight@main
+    - id: get_versions
+      run: cat workflow-support/pdns-versions.json >> $GITHUB_OUTPUT
   ci-image:
     runs-on: ubuntu-20.04
     needs:
@@ -59,7 +64,7 @@ jobs:
     - preflight
     strategy:
       matrix:
-        pdns: [4.4, 4.5, 4.6, master]
+        pdns: ${{ fromJSON(needs.preflight.outputs.versions).pdns }}
     steps:
     - uses: actions/checkout@v3
     - uses: ./.github/actions/make-ci-image
@@ -79,7 +84,7 @@ jobs:
     - ci-image
     strategy:
       matrix:
-        pdns: [4.4, 4.5, 4.6, master]
+        pdns: ${{ fromJSON(needs.preflight.outputs.versions).pdns }}
         python: [py38, py39, py310, py311]
       fail-fast: false
     container:
