--- a/workflow-support/image_files.yml
+++ b/workflow-support/image_files.yml
@@ -1,4 +1,5 @@
 image_files:
   - 'tox.ini'
   - 'workflow-support/make_ci_image.sh'
-  - '.github/actions/make-ci-image/action.yml'
+  - 'workflow-support/pdns_build.sh'
+  - 'versions.json'
