Ensure that ansible-lint will find formatting errors in CI

--- a/tox.ini
+++ b/tox.ini
@@ -37,7 +37,7 @@ commands=
     flake8 --ignore=E501,E402,E231 src
     black --check --diff src
     bash -c 'shellcheck workflow-support/*.sh'
-    bash -c 'ansible-lint -v'
+    bash -c 'ansible-lint --write=all -v'
 [testenv:lint]
 allowlist_externals=bash
 deps=
