Correct path of versions.json in image_files list

--- a/workflow-support/image_files.yml
+++ b/workflow-support/image_files.yml
@@ -2,4 +2,4 @@ image_files:
   - 'tox.ini'
   - 'workflow-support/make_ci_image.sh'
   - 'workflow-support/pdns_build.sh'
-  - 'versions.json'
+  - 'workflow-support/versions.json'
