Removed support for local API spec files, as all supported versions of PowerDNS Auth provide it via HTTP

--- a/tox.ini
+++ b/tox.ini
@@ -9,8 +9,8 @@ deps=
     jsonschema<4
 commands=
     python -VV
-    ansible-playbook -i localhost, workflow-support/test-tsigkey-pdns-{env:pdns_version}.yml
-    ansible-playbook -i localhost, workflow-support/test-zone-pdns-{env:pdns_version}.yml
+    ansible-playbook -i localhost, workflow-support/test-tsigkey.yml
+    ansible-playbook -i localhost, workflow-support/test-zone.yml
 [galaxy-base]
 deps=
     ansible
@@ -52,7 +52,6 @@ commands=
     bash -c 'shellcheck workflow-support/*.sh'
     bash -c 'ansible-lint --write=all -v'
 [testenv:py{38,39,310,311}-ansible]
-passenv=pdns_version
 deps=
     {[galaxy-base]deps}
     {[ansible-base]deps}
