Ensure that more files are included in CI and Lint triggers

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -5,7 +5,7 @@ on:
     branches:
     - main
     paths:
-    - '*.py'
+    - 'src/**.py'
     - 'tox.ini'
     - 'workflow-support/*.sh'
     - '.github/workflows/lint.yml'
