--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,11 +5,10 @@ on:
     branches:
     - main
     paths:
-    - '*.py'
+    - 'src/**.py'
     - 'tox.ini'
     - 'workflow-support/test-*.yml'
-    - 'workflow-support/make_ci_image.sh'
-    - 'workflow-support/start_server.sh'
+    - 'workflow-support/*.sh'
     - 'workflow-support/versions.json'
     - '.github/workflows/ci.yml'
   pull_request:
@@ -20,11 +19,10 @@ on:
     branches:
     - main
     paths:
-    - '*.py'
+    - 'src/**.py'
     - 'tox.ini'
     - 'workflow-support/test-*.yml'
-    - 'workflow-support/make_ci_image.sh'
-    - 'workflow-support/start_server.sh'
+    - 'workflow-support/*.sh'
     - 'workflow-support/versions.json'
     - '.github/workflows/ci.yml'
   schedule:
