--- a/tox.ini
+++ b/tox.ini
@@ -52,6 +52,7 @@ commands=
     bash -c 'shellcheck workflow-support/*.sh'
     bash -c 'ansible-lint --write=all -v'
 [testenv:py{38,39,310,311}-ansible]
+passenv=pdns_version
 deps=
     {[galaxy-base]deps}
     {[ansible-base]deps}
