Correct 'passenv' syntax in tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -69,7 +69,7 @@ setenv=
 commands=
     ansible-playbook -i localhost, workflow-support/build.yml
 [testenv:publish-action]
-passenv=ANSIBLE_GALAXY_TOKEN TAG
+passenv=ANSIBLE_GALAXY_TOKEN,TAG
 deps=
     {[galaxy-base]deps}
 commands=
